--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,7 +1,33 @@
 .map {
-  line-height: 0;
+  position: relative;
+
+  &::after {
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 27px;
+    height: 27px;
+
+    background-image: url("../../img/icon-map-marker.svg");
+    background-repeat: no-repeat;
+    background-size: 27px 27px;
+    background-position: 0 0;
+  }
+}
+
+//.map__picture {}
+
+.map__image {
+  display: block;
 }
 
 .map__interactive {
   border: none;
+
+  &--nojs {
+    display: none;
+  }
 }
