--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -9,7 +9,7 @@
 
 .page-footer__visit {
   margin: 0;
-  padding-top: 43px;
+  padding-top: 36px; //43
   padding-bottom: 22px;
 
   font-size: 21px;
