--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,23 +1,5 @@
 .map {
   position: relative;
-
-  &::after {
-    position: absolute;
-    content: "";
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    width: 27px;
-    height: 27px;
-
-    background-image: url("../../img/icon-map-marker.svg");   // работает
-    background-image: url("../../img/sprite.svg#icon-map-marker"); // не ругается, но и не показывает
-
-    background-repeat: no-repeat;
-    background-size: 27px 27px;
-    background-position: 0 0;
-  }
 }
 
 //.map__picture {}
@@ -32,4 +14,11 @@
   &--nojs {
     display: none;
   }
+}
+
+.map__marker {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
