--- a/source/sass/blocks/invitation.scss
+++ b/source/sass/blocks/invitation.scss
@@ -1,5 +1,5 @@
 .invitation {
-  margin-bottom: 48px; //40
+  padding-bottom: 48px;
   text-align: center;
 }
 
@@ -79,7 +79,8 @@
 
   .invitation__button {
     margin-top: 27px;
-    padding: 17px 136px;
+    padding: 17px 130px;
+    max-width: 458px;
   }
 }
 
