--- a/source/sass/blocks/slogan.scss
+++ b/source/sass/blocks/slogan.scss
@@ -1,4 +1,8 @@
-//.slogan {outline: 1px solid green;}
+.slogan {
+  // outline: 1px solid green;
+  background-color: $bg-main-color;
+}
+
 
 .slogan__wrap {
   //outline: 1px dotted grey;
