--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,12 +32,11 @@
 @import "blocks/form.scss";
 @import "blocks/person.scss";
 @import "blocks/contact.scss";
-//@import "blocks/row.scss";
-//@import "blocks/legend.scss";
-//@import "blocks/unit.scss";
 @import "blocks/impression.scss";
 @import "blocks/visited.scss";
 @import "blocks/emotions.scss";
 //
 @import "blocks/card.scss";
 @import "blocks/line.scss";
+//
+@import "browsers.scss";
