--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -90,25 +90,41 @@
   .contact__block {
     display: flex;
     justify-content: space-between;
+
+    width: 960px;
   }
 
   .contact__item:first-of-type .contact__label {
-    padding-top: 17px;
+    padding-top: 9px;
   }
 
   .contact__item:last-of-type .contact__label {
-    padding-top: 8px;
+    padding-top: 0;
   }
 
   .contact__item {
     flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
 
+    width: 400px;
     margin-bottom: 0;
+
+    &:last-of-type {
+      width: 479px;
+    }
   }
 
   .contact__label {
+    flex-grow: 1;
+
     padding-left: 0;
-    padding-right: 16px;
+    padding-right: 0;
+  }
+
+  .contact__wrap {
+    width: 316px;
+    min-width: 316px;
   }
 
   .contact__label2 {
