--- a/source/sass/blocks/impression.scss
+++ b/source/sass/blocks/impression.scss
@@ -2,6 +2,8 @@
 //.impression__title {}
 
 .impression__item {
+  min-height: 51px;
+
   &:first-of-type {
     margin-top: 4px;
   }
@@ -19,7 +21,7 @@
   position: relative;
 
   display: block;
-  height: 51px;
+  min-height: 51px;
   padding-left: 77px;
   padding-top: 12px;
   margin-bottom: 23px;
@@ -34,11 +36,12 @@
   &::before {
     position: absolute;
     content: "";
-    top: 0;
+    top: 50%;
     left: 0;
+    transform: translateY(-50%);
 
     width: 51px;
-    height: 100%;
+    height: 51px;
 
     border-radius: 50%;
     background-color: $elem-outer-fresh-color;
@@ -48,8 +51,8 @@
     position: absolute;
     content: "";
     top: 50%;
-    transform: translateY(-50%);
     left: 15px;
+    transform: translateY(-50%);
 
     width: 20px;
     height: 20px;
@@ -102,6 +105,7 @@
 
   .impression__label {
     padding-left: 73px;
+    padding-right: 16px;
   }
 
   .impression__item:nth-of-type(n+1) {
