--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -21,8 +21,9 @@
     background-color: $divider-color;
   }
 
+  // the last horizontal line is not needed
   &:last-of-type::after {
-    content: none;  // the last horizontal line is not needed
+    content: none;
   }
 
   &:nth-of-type(1) > .location__wrap {
@@ -36,8 +37,8 @@
   }
 
   &:nth-of-type(3) > .location__wrap {
-    padding-left: 37px;
-    padding-right: 37px;
+    padding-left: 35px;
+    padding-right: 35px;
   }
 }
 
