--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -1,10 +1,10 @@
-//.media { //outline: 1px dotted green; }
+// .media {//background-color: $bg-main-color;}
 
 .media__wrap {
   margin-top: 38px;
   margin-bottom: 29px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 .media__list {
@@ -25,7 +25,7 @@
 
 @media (min-width: $tablet-width) {
   .media__wrap {
-    margin: 75px 110px 68px;
+    margin: 75px 108px 68px;
     padding: 0;
   }
 
@@ -39,6 +39,6 @@
 
 @media (min-width: $desktop-width) {
   .media__wrap {
-    margin: 110px 386px 71px;
+    margin: 110px 383px 71px;
   }
 }
