--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,46 +1,63 @@
 .page-footer {
-  margin: 0 auto;
+  display: flex;
+  justify-content: column;
+  align-items: center;
+
   width: 320px;
+  min-height: 243px;
 
   background-color: $bg-main-color;
 }
 
-//.page-footer__wrapper {}
+.page-footer__wrapper {
+  margin: 0 auto;
+}
 
 .page-footer__visit {
   margin: 0;
-  padding-top: 36px; //43
-  padding-bottom: 22px;
+  padding-top: 26px;
+  padding-bottom: 20px;
 
   font-size: 21px;
   line-height: 26px;
   text-align: center;
 }
 
-//.page-footer__social {outline: 1px dotted red;}
+.page-footer__social {
+  margin-bottom: 24px;
+}
 
 @media (min-width: $tablet-width) {
   .page-footer {
     width: $tablet-width;
     min-height: 120px;
+    height: 1px;  // IE11
   }
 
   .page-footer__wrapper {
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+
+    width: $wrapper-tablet-width;
+    margin: 0 auto;
   }
 
   .page-footer__visit {
-    padding-top: 44px;
+    flex-basis: calc(100% / 3);
+
+    padding: 0;
+    text-align: left;
   }
 
   .page-footer__social {
-    margin-top: 20px;
+    flex-basis: calc(100% / 3);
     margin-bottom: 0;
   }
 
   .page-footer__copyright {
-    margin-top: 32px;
+    flex-basis: calc(100% / 3);
+
+    text-align: right;
   }
 }
 
@@ -50,7 +67,6 @@
   }
 
   .page-footer__wrapper {
-    margin-left: -15px;
-    margin-right: -15px;
+    width: $wrapper-desktop-width;
   }
 }
