--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,9 +1,9 @@
 .video {
-  padding-bottom: 32px;
+  padding-bottom: 38px;
 }
 
 .video__words-wrap {
-  padding: 32px 42px;
+  padding: 32px 40px 26px;
 }
 
 .video__title {
