--- a/source/sass/blocks/visited.scss
+++ b/source/sass/blocks/visited.scss
@@ -111,6 +111,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
     width: 100%;
     min-height: 88px;
