--- a/source/sass/blocks/person.scss
+++ b/source/sass/blocks/person.scss
@@ -35,6 +35,15 @@
     &::placeholder {
       color: #000000;
     }
+
+    &:hover {
+      background-color: #e5e5e5;
+    }
+
+    &:focus {
+      border: solid 4px #e5e5e5;
+      background-color: #ffffff;
+    }
   }
 
   &:first-of-type &-input {
