--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,12 +22,12 @@
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/copyright.scss";
-//
+// photo-video
 @import "blocks/media.scss";
 @import "blocks/p.scss";
 @import "blocks/video.scss";
 @import "blocks/panel.scss";
-//
+// form
 @import "blocks/reviews.scss";
 @import "blocks/form.scss";
 @import "blocks/person.scss";
@@ -35,8 +35,8 @@
 @import "blocks/impression.scss";
 @import "blocks/visited.scss";
 @import "blocks/emotions.scss";
-//
+// a little more
 @import "blocks/card.scss";
 @import "blocks/line.scss";
-//
+// browser features
 @import "browsers.scss";
