--- a/source/sass/blocks/panel.scss
+++ b/source/sass/blocks/panel.scss
@@ -39,22 +39,22 @@
   background-color: #ffffff;
 }
 
-.panel__slider {
-  position: absolute;
-  top: 50%;
-  left: 21%;
-  transform: translateY(-50%);
+// .panel__slider {
+//   position: absolute;
+//   top: 50%;
+//   left: 21%;
+//   transform: translateY(-50%);
 
-  padding: 0;
-  width: 10px;
-  height: 10px;
+//   padding: 0;
+//   width: 10px;
+//   height: 10px;
 
-  border: none;
-  border-radius: 50%;
-  background-color: #ffffff;
+//   border: none;
+//   border-radius: 50%;
+//   background-color: #ffffff;
 
-  cursor: pointer;
-}
+//   cursor: pointer;
+// }
 
 .panel__buttons {
   transform: translateY(56px);
@@ -74,7 +74,20 @@
   &--replay {
     width: 16px;
     margin-left: 25px;
+  }
+
+  &--slider {
+    width: 10px;
+    height: 10px;
+    margin-left: 18px;
     margin-right: auto;
+
+    transform: translateY(-56px);
+
+    border-radius: 50%;
+    background-color: #ffffff;
+
+    cursor: pointer;
   }
 
   &--cc {
@@ -123,9 +136,9 @@
     width: 389px;
   }
 
-  .panel__slider {
-    left: 32%;
-  }
+  // .panel__slider {
+  //   left: 32%;
+  // }
 
   .panel__buttons {
     transform: none;
@@ -134,6 +147,12 @@
   .panel__btn {
     &--replay {
       margin-left: 35px;
+    }
+
+    &--slider {
+      margin-left: 24.2%;
+      transform: none;
+      z-index: 100;
     }
 
     &--cc {
@@ -168,7 +187,11 @@
     width: 540px;
   }
 
-  .panel__slider {
-    left: 25.6%;
+  // .panel__slider {
+  //   left: 25.6%;
+  // }
+
+  .panel__btn--slider {
+    margin-left: 19.2%;
   }
 }
