--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 $font-stack: "PT Sans", "Arial", sans-serif;
 $primary-color: #81b3d2;
 $primary-text-color: #ffffff;
@@ -52,4 +51,4 @@ $tablet-video-panel-height: 93px;
 $bg-btn-hover: #669ec0;
 $bg-btn-down: #5496bd;
 $bg-btn-disabled: #e5e5e5;
-$color-btn-down:hsla(0, 0%, 100%, 0.3); //#ffffff, opacity:0.3
+$color-btn-down:hsla(0, 0%, 100%, 0.3);
