--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,6 +1,6 @@
 .copyright {
   display: flex;
-  justify-content: center; //flex-end;
+  justify-content: center;
   align-items: center;
   line-height: 26px;
 }
@@ -14,9 +14,6 @@
 }
 
 .copyright__link {
-  // display: inline-block;
-  // vertical-align: bottom;
-
   margin-top: 8px;
   padding-left: 14px;
 
@@ -47,49 +44,3 @@
     justify-content: flex-end;
   }
 }
-
-/*
-.copyright {
-  padding-bottom: 10px;
-
-  text-align: center;
-  line-height: 26px;
-}
-
-.copyright__text {
-  display: inline-block;
-  vertical-align: top;
-
-  font-size: 14px;
-  font-weight: normal;
-}
-
-.copyright__link {
-  display: inline-block;
-  vertical-align: bottom;
-
-  padding-left: 10px;
-
-  &:hover svg {
-    fill: #81b3d2;
-  }
-
-  &:active svg {
-    fill: #000000;
-    opacity: 0.3;
-  }
-
-  &:focus {
-    outline: none;
-  }
-
-  &:focus svg {
-    @include outline();
-  }
-}
-
-.copyright svg {
-  pointer-events: none;
-}
-
-*/
